plugins {
    id 'java'
    id 'application'
    id 'jacoco'
}

group = 'net.shrimpworks'
version = "1.3"

mainClassName = 'net.shrimpworks.unreal.archive.Main'

sourceCompatibility = '11'
targetCompatibility = '11'

if (System.getenv().containsKey("TRAVIS_BUILD_NUMBER")) {
    version = "${version}.${System.env.TRAVIS_BUILD_NUMBER}"
}

repositories {
    mavenCentral()
    maven {
        url "https://code.shrimpworks.za.net/artefacts"
    }
}

dependencies {
    implementation 'net.shrimpworks:unreal-package-lib:1.+'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.6'

    implementation 'org.jsoup:jsoup:1.9.+'

    implementation 'org.freemarker:freemarker:2.+'

    implementation 'com.backblaze.b2:b2-sdk-core:1.4.0'
    implementation 'com.backblaze.b2:b2-sdk-httpclient:1.4.0'

    implementation 'com.github.rjeschke:txtmark:0.13'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.4.2'
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.enabled true
    }
}
